--- a/RoboFight/RoboFight/RoboFight.csproj
+++ b/RoboFight/RoboFight/RoboFight.csproj
@@ -72,8 +72,9 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnemyManager.cs" />
     <Compile Include="Helper.cs" />
-    <Compile Include="Hero.cs" />
+    <Compile Include="Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
