--- a/RoboFight/RoboFight/RoboFight.csproj
+++ b/RoboFight/RoboFight/RoboFight.csproj
@@ -72,8 +72,11 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemManager.cs" />
     <Compile Include="EnemyManager.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="Items\Crowbar.cs" />
+    <Compile Include="Items\Item.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
