--- a/RoboFight/RoboFight/RoboFight.csproj
+++ b/RoboFight/RoboFight/RoboFight.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="Items\Crowbar.cs" />
     <Compile Include="Items\Item.cs" />
+    <Compile Include="ProjectileManager.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
